musica (1.8) UNRELEASED; urgency=low

  * debian/cron.hourly, debian/rules:
    - maintain an hourly updated list of artists/albums/songs, for
      more efficient and secure printing of statists and doing searches
  * debian/rules: drop debconf stuff, as it's not used

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 06 Feb 2010 13:07:38 -0800

musica (1.7) lucid; urgency=low

  * index.php:
    - s/Music/Musica/
    - extend artist hyperlink to include icon, like the others
    - update copyright to 2010
    - update copyright text

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 30 Jan 2010 19:25:36 -0800

musica (1.6) lucid; urgency=low

  * index.php:
    - add support for .oga file format, LP: #320360
  * index.php, debian/musica.dirs, debian/rules:
    - drop use of tmp files, instead use content type header, LP: #480509
    - drop /var/lib/musica/tmp directory

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 10 Nov 2009 23:34:19 -0600

musica (1.5) karmic; urgency=low

  * index.php, debian/copyright: re-license under Affero Public License

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 28 Apr 2009 12:40:18 -0500

musica (1.4) jaunty; urgency=low

  * index.php: support ogg, wav, and flac files, LP: #288839 and LP: #313408

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 15 Jan 2009 22:39:55 -0600

musica (1.3) intrepid; urgency=low

  * Fix a couple of minor issues to get musica working immediately on
    installation (LP: #285322)
  * index.php: must insert script name in url preamble
  * debian/rules: link tmpdir into web share
  * debian/apache.conf: tmp section no longer needed (using symlink)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 18 Oct 2008 01:05:02 -0500

musica (1.2) intrepid; urgency=low

  * debian/musica.install: actually install star_on.png and star_off.png
    LP: #285134

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 17 Oct 2008 14:11:16 -0500

musica (1.1) intrepid; urgency=low
